Great advances made

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="edit-page hidden" id="edit-page">
@@ -19,7 +20,7 @@
     </div>
     <div class="top">
       <div class="header">
-        <h1>Json File editor</h1>
+        <h1>Map Editor</h1>
         <h4>Made by Tice Kralt</h4>
       </div>
       <div class="export-section">
@@ -28,7 +29,7 @@
         </button>
       </div>
     </div>
-    <div id="content"></div>
+    <ul id="list"></ul>
     <script src="scripts/main.js"></script>
   </body>
 </html>
